k8s/ingress/ingress-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-comparison-ingress
  namespace: product-platform
  labels:
    app.kubernetes.io/part-of: product-comparison
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # ATUALIZADO - Novo certificado
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:347277718217:certificate/a23b58b7-fdd4-45b4-b6f7-ff9c5615d093
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    # ATUALIZADO - Novo WAF ACL
    alb.ingress.kubernetes.io/waf-acl-arn: arn:aws:wafv2:us-east-1:347277718217:regional/webacl/product-comparison-dev-waf/6bf22e41-6b65-4c5b-8690-9428e4d01674
    alb.ingress.kubernetes.io/group.name: product-comparison
spec:
  ingressClassName: alb
  rules:
    - host: api.cognitiva.solutions
      http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 8082
          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8081
